--- a/package.json
+++ b/package.json
@@ -14,17 +14,58 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-query": "^5.59.9",
+    "@udecode/plate-alignment": "^39.0.0",
+    "@udecode/plate-autoformat": "^39.0.0",
+    "@udecode/plate-basic-marks": "^39.0.0",
+    "@udecode/plate-block-quote": "^39.0.0",
+    "@udecode/plate-break": "^39.0.0",
+    "@udecode/plate-caption": "^39.0.0",
+    "@udecode/plate-code-block": "^39.0.0",
+    "@udecode/plate-comments": "^39.0.0",
+    "@udecode/plate-csv": "^39.1.6",
+    "@udecode/plate-date": "^39.0.0",
+    "@udecode/plate-dnd": "^39.0.0",
+    "@udecode/plate-docx": "^39.2.4",
+    "@udecode/plate-emoji": "^39.0.0",
+    "@udecode/plate-font": "^39.0.0",
+    "@udecode/plate-heading": "^39.0.0",
+    "@udecode/plate-highlight": "^39.0.0",
+    "@udecode/plate-horizontal-rule": "^39.0.0",
+    "@udecode/plate-indent": "^39.0.0",
+    "@udecode/plate-indent-list": "^39.1.10",
+    "@udecode/plate-kbd": "^39.0.0",
+    "@udecode/plate-layout": "^39.0.0",
+    "@udecode/plate-line-height": "^39.0.0",
+    "@udecode/plate-link": "^39.1.9",
+    "@udecode/plate-list": "^39.0.0",
+    "@udecode/plate-node-id": "^39.0.0",
+    "@udecode/plate-reset-node": "^39.0.0",
+    "@udecode/plate-select": "^39.0.0",
+    "@udecode/plate-selection": "^39.2.3",
+    "@udecode/plate-tabbable": "^39.0.0",
+    "@udecode/plate-table": "^39.1.6",
+    "@udecode/plate-toggle": "^39.0.0",
+    "@udecode/plate-trailing-block": "^39.0.0",
+    "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
-    "tailwind-merge": "^2.5.3",
+    "sonner": "^1.5.0",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-svgr": "^4.2.0",
     "zod": "^3.23.8"
