--- a/package.json
+++ b/package.json
@@ -13,15 +13,22 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@ariakit/react": "^0.4.13",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toolbar": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.9",
+    "@udecode/cn": "^39.0.0",
+    "@udecode/plate": "^39.2.4",
     "@udecode/plate-alignment": "^39.0.0",
     "@udecode/plate-autoformat": "^39.0.0",
     "@udecode/plate-basic-marks": "^39.0.0",
@@ -29,12 +36,15 @@
     "@udecode/plate-break": "^39.0.0",
     "@udecode/plate-caption": "^39.0.0",
     "@udecode/plate-code-block": "^39.0.0",
+    "@udecode/plate-combobox": "^39.0.0",
     "@udecode/plate-comments": "^39.0.0",
+    "@udecode/plate-common": "^39.2.1",
     "@udecode/plate-csv": "^39.1.6",
     "@udecode/plate-date": "^39.0.0",
     "@udecode/plate-dnd": "^39.0.0",
     "@udecode/plate-docx": "^39.2.4",
     "@udecode/plate-emoji": "^39.0.0",
+    "@udecode/plate-floating": "^39.1.6",
     "@udecode/plate-font": "^39.0.0",
     "@udecode/plate-heading": "^39.0.0",
     "@udecode/plate-highlight": "^39.0.0",
@@ -46,8 +56,10 @@
     "@udecode/plate-line-height": "^39.0.0",
     "@udecode/plate-link": "^39.1.9",
     "@udecode/plate-list": "^39.0.0",
+    "@udecode/plate-media": "^39.2.4",
     "@udecode/plate-node-id": "^39.0.0",
     "@udecode/plate-reset-node": "^39.0.0",
+    "@udecode/plate-resizable": "^39.1.6",
     "@udecode/plate-select": "^39.0.0",
     "@udecode/plate-selection": "^39.2.3",
     "@udecode/plate-tabbable": "^39.0.0",
@@ -57,13 +69,21 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.451.0",
     "next-themes": "^0.3.0",
+    "prismjs": "^1.29.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.2",
+    "slate": "^0.110.2",
+    "slate-history": "^0.109.0",
+    "slate-hyperscript": "^0.100.0",
+    "slate-react": "^0.110.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
@@ -74,6 +94,7 @@
     "@eslint/js": "^9.11.1",
     "@types/eslint-config-prettier": "^6.11.3",
     "@types/node": "^22.7.5",
+    "@types/prismjs": "^1.26.5",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
